Fix overflow on catalog items

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -40,6 +40,7 @@
 .catalogitemimage {
   width: 126px;
   padding: 5px;
+  overflow-wrap: break-word;
 }
 
 .arkoticon_small {
